--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start":"vite",
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port $PORT",
     "build": "vite build",
     "preview": "vite preview"
   },
